fix(stackoverflow): hide overflow

--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -84,6 +84,7 @@
       flex-grow: 1;
       background: $clight;
       padding: 1em;
+      overflow: hidden;
 
       > .tags {
         display: flex;
